2008-04-21  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in:
	* NEWS: 2.23.1

2008-04-13  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Prepare for a gucharmap API change.

2008-04-11  Vincent Untz  <vuntz@gnome.org>

	* configure.in: add back the libxml2 check (needed by sticky notes)

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	* configure.in: check for gweather >= 2.22.1, don't check for libxml2
	and the gweather locations file. End of bug #526216.

2008-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Convert from glade to gtk-builder. Patch from Jaap
	Haitsma (bug #521082).

2008-03-13  Callum McKenzie  <callum@spooky-possum.org>

	* po-locations: Removed since it is now in libgweather (see bug
	#521078).
	* */.cvsignore: Remove all the old .cvsingore files since its been
	a while since we used CVS (also bug #521078).

2008-03-10  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: 2.22.0

2008-02-26  Ryan Lortie  <desrt@desrt.ca>

	* configure.in:
	* NEWS: 2.21.92

2008-02-22  Olav Vitters  <olav@bkor.dhs.org>

	* configure.in: Build breakage fix: Re-add libgweather, removed in
	previous commit.

2008-02-12  Ryan Lortie  <desrt@desrt.ca>

	* configure.in: PKG_CHECK_MODULES for GIO
	* Makefile.am: move trashapplet to not depend on gnome-vfs

2008-02-11  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: 2.21.91

2008-01-15  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: 2.21.4: A new release to build with the latest 
	libgweather.

2008-01-14  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: 2.21.3

2008-01-13  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am: 
	* configure.in: Move libgweather to its own module.

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* man/Makefile.am:
	* man/gtik2_applet.1:
	* man/gtik2_applet.sgml:
	Remove this old man page. Closes bug #400961.
