@@ -736,6 +736,7 @@ gkb-new/xmodmap.sun/Makefile
 charpick/Makefile
 charpick/help/Makefile
 invest-applet/Makefile
+invest-applet/docs/Makefile
 invest-applet/invest/Makefile
 invest-applet/invest/defs.py
 invest-applet/data/Makefile
