@@ -1,0 +1,9 @@
+include $(top_srcdir)/gnome-doc-utils.make
+dist-hook: doc-dist-hook
+
+DOC_MODULE = invest-applet
+DOC_ENTITIES = legal.xml
+
+DOC_FIGURES = 
+
+DOC_LINGUAS =
