@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<omf>
+  <resource>
+    <subject category="GNOME|Applets|Utility"/>
+    <type>user's guide</type>
+    <relation seriesid="df109296-40e7-11d6-935f-beaae1cfe4f9"/>
+    <rights type="GNU FDL" license.version="1.1" holder="Terence Hall"/>
+  </resource>        
+</omf>
