@@ -1,3 +1,8 @@
+2008-05-02  Callum McKenzie  <callum@spooky-possum.org>
+
+	* configure.in: Add the Makefile for the invest applet docs
+	directory.
+
 2008-04-21  Callum McKenzie  <callum@spooky-possum.org>
 
 	* configure.in:
